# bot-the-builder

./: .gitignore  README.md  client.py  pyproject.toml  server.py
btb/: __init__.py  pyproject.toml  startup.sh
btb/client/: __init__.py  client.py
btb/server/: __init__.py  server.py
btb/server/agents/: __init__.py  debugger.py  formatter.py  generator.py  invoker.py  matcher.py  requirement_resolver.py  summary.py
btb/server/agents/helpers/: backend.py  db_helper.py  marker.py  postgres.py  vector_db.py
